# website-cloner-sdk

./: .dockerignore  .env.example  .git-commit-template  .gitattributes  .gitignore  Dockerfile  README.md  SETUP_SUMMARY.txt  pyproject.toml  requirements.txt  run_docker.sh  run_webui.py  setup.py
examples/: advanced_usage.py  basic_usage.py  batch_cloning.py  custom_integration.py  screenshot_monitoring.py
experiments/: README.md  compare_runs.py  demo_benchmark.py  experiment_engine.py  results_storage.py  run_benchmark.py  simple_demo.py  test_sites.py
src/: __init__.py  app.py  cli.py  cloner.py  config.py  main.py  sdk.py
src/discovery/: __init__.py  site_analyzer.py  sitemap_parser.py  wordpress_detector.py
src/downloaders/: __init__.py  css_downloader.py  resource_downloader.py
src/drivers/: __init__.py  chrome_driver.py
src/events/: __init__.py  event_emitter.py
src/monitors/: __init__.py  scheduler.py  screenshot_monitor.py  storage_manager.py
src/parsers/: __init__.py  html_parser.py
src/utils/: __init__.py  file_utils.py  logger.py  url_utils.py
src/web/: __init__.py  fastapi_app.py
src/web/templates/: browser.html  discover.html  index.html  screenshots.html
tests/: __init__.py  test_cloner.py  test_file_utils.py  test_resource_downloader.py  test_url_utils.py
